--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ csvm-element {
 
   <body>
 
-    <button value="./demos/faces.csv">faces.csv</button> (<a href="https://github.com/thomaswilburn/csvm/blob/main/demos/faces.csv">Source</a>)
+    <button value="./demos/faces.csv">faces.csv</button><button value="./demos/faces2.csv">faces2.csv</button>
     <button>Halt VM</button>
     <csvm-element></csvm-element>
 
